src/objects/BigMachines__Quote__c.object
<CustomObject>
    <description>An Oracle CPQ Cloud quote object storing the proposal(s) and line items.</description>
    <fields>
        <fullName>BigMachines__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BigMachines_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Amount__c</fullName>
        <label>Summary Amount</label>
        <summarizedField>BigMachines__Quote_Product__c.BigMachines__Total_Price__c</summarizedField>
        <summaryForeignKey>BigMachines__Quote_Product__c.BigMachines__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BigMachines__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BigMachines__Is_Forced_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this to true from Oracle CPQ Cloud to force a primary quote to synchronize with its opportunity.</description>
        <label>Is Forced Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Line_Items__c</fullName>
        <label>Line Items</label>
        <summaryForeignKey>BigMachines__Quote_Product__c.BigMachines__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BigMachines__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>BigMachines_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Prep_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prep Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Pricebook_Id__c</fullName>
        <label>Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Process_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Oracle CPQ Cloud Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BigMachines__Configuration_Record__c.BigMachines__Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BigMachines__Configuration_Record__c</referenceTo>
        <relationshipLabel>Oracle Quotes and Orders</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Total_Amount__c</fullName>
        <formula>IF(BigMachines__Amount__c &gt; 0, BigMachines__Amount__c,  BigMachines__Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BigMachines__Total__c</fullName>
        <label>Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BigMachines__Transaction_Id__c</fullName>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OQU_LKP_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Oracle Quotes and Orders</relationshipLabel>
        <relationshipName>Oracle_Quotes_and_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Oracle Quote</label>
    <listViews>
        <fullName>BigMachines__All</fullName>
        <columns>NAME</columns>
        <columns>BigMachines__Description__c</columns>
        <columns>BigMachines__Account__c</columns>
        <columns>BigMachines__Opportunity__c</columns>
        <columns>BigMachines__Status__c</columns>
        <columns>BigMachines__Is_Primary__c</columns>
        <columns>BigMachines__Line_Items__c</columns>
        <columns>BigMachines__Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BigMachines__Orphan_Quotes</fullName>
        <columns>NAME</columns>
        <columns>BigMachines__Status__c</columns>
        <columns>BigMachines__Description__c</columns>
        <columns>BigMachines__Account__c</columns>
        <columns>BigMachines__Total_Amount__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BigMachines__Opportunity__c</field>
            <operation>equals</operation>
        </filters>
        <label>Orphan Quotes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Quote Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Quotes and Orders</pluralLabel>
    <recordTypes>
        <fullName>BigMachines__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>